@@ -2,6 +2,11 @@
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  02 Feb 2004; Martin Schlemmer <azarah@gentoo.org>:
+
+   Tweak livecd support changes and add some more to hopefully sort out
+   last issues, with help from Brad House <brad_mssw@gentoo.org>.
+
 * rc-scripts 1.4.3.12p3 (21 Jan 2004)
 
   19 Jan 2004; Martin Schlemmer <azarah@gentoo.org>:
